--- a/index.html
+++ b/index.html
@@ -1,68 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Page</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body class="bg-gray-100">
-    <header class="flex justify-between items-center p-6 bg-white shadow-md">
-        <div class="flex items-center space-x-2">
-            <div class="w-4 h-4 bg-yellow-500 rounded-full"></div>
-            <h1 class="text-lg font-bold">Aditya Gond</h1>
-        </div>
-        <nav>
-            <ul class="flex space-x-6 text-gray-700">
-                <li><a href="#resume" class="hover:underline">Resume</a></li>
-                <li><a href="#projects" class="hover:underline">Projects</a></li>
-                <li><a href="#contact" class="hover:underline">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main class="flex flex-col md:flex-row items-center justify-center text-center md:text-left p-40">
-        <div class="w-64 h-64 md:w-80 md:h-80 bg-gray-300 rounded-full overflow-hidden">
-            <img src="profile.jpg" alt="Profile Picture" class="w-full h-full object-cover">
-        </div>
-        <div class="mt-6 md:mt-0 md:ml-10 max-w-xl">
-            <h2 class="text-5xl font-bold">Hello</h2>
-            <h3 class="text-lg font-semibold mt-2">A Bit About Me</h3>
-            <p class="text-gray-600 mt-2">I'm a paragraph. Click here to add your own text and edit me. I'm a great
-                place for you to tell a story and let your users know a little more about you.</p>
-            <div class="flex space-x-4 mt-6">
-                <a href="#resume" class="bg-yellow-500 text-black font-bold py-2 px-6 rounded-full shadow-md">Resume</a>
-                <a href="#projects"
-                    class="bg-red-500 text-black font-bold py-2 px-6 rounded-full shadow-md">Projects</a>
-                <a href="#contact" class="bg-blue-300 text-black font-bold py-2 px-6 rounded-full shadow-md">Contact</a>
-            </div>
-        </div>
-    </main>
-
-    <footer class="bg-white shadow-md mt-10 p-6 text-center">
-        <p class="text-gray-600">&copy; 2025 Nicol Rider. All Rights Reserved.</p>
-        <div class="flex justify-center space-x-4 mt-2">
-            <a href="#" class="text-gray-700 hover:underline">Privacy Policy</a>
-            <a href="#" class="text-gray-700 hover:underline">Terms of Service</a>
-            <a href="#" class="text-gray-700 hover:underline">Contact</a>
-        </div>
-    </footer>
-</body>
-
-</html> -->
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,8 +10,8 @@
     <header class="flex flex-wrap justify-between items-center p-6 bg-white shadow-md">
         <div class="flex items-center space-x-2">
             <div class="w-4 h-4 bg-yellow-500 rounded-full"></div>
-            <h1 class="text-lg font-bold">Nicol Rider</h1>
-            <span class="text-gray-500">Editor</span>
+            <h1 class="text-lg font-bold">Aditya Gond</h1>
+            <span class="text-gray-500">Web Developer</span>
         </div>
         <nav>
             <ul class="flex flex-wrap space-x-4 md:space-x-6 text-gray-700">
@@ -104,7 +39,7 @@
     </main>
 
     <footer class="bg-white shadow-md mt-10 p-6 text-center">
-        <p class="text-gray-600">&copy; 2025 Nicol Rider. All Rights Reserved.</p>
+        <p class="text-gray-600">&copy; 2025 Aditya Gond. All Rights Reserved.</p>
         <div class="flex flex-wrap justify-center space-x-4 mt-2">
             <a href="#" class="text-gray-700 hover:underline">Privacy Policy</a>
             <a href="#" class="text-gray-700 hover:underline">Terms of Service</a>
